cmake_minimum_required(VERSION 3.23)
project(chack)

set(CMAKE_CXX_STANDARD 14)

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})

add_executable(chack main.cpp Game.cpp Game.h Level.cpp Level.h Terminal.cpp Terminal.h objects/Player.cpp objects/Player.h Position.cpp Position.h Command.h objects/Object.cpp objects/Object.h objects/ObjectType.h objects/Wall.cpp objects/Wall.h objects/Goal.cpp objects/Goal.h Room.cpp Room.h screens/Title.cpp screens/Title.h screens/WinScreen.cpp screens/WinScreen.h screens/LoseScreen.cpp screens/LoseScreen.h objects/Obstacle.cpp objects/Obstacle.h)

target_link_libraries(chack ${CURSES_LIBRARIES})